# jodin

./: .gitignore  .swp  LICENSE  Makefile  README.md  config.ini  jodin.out  output.txt
.github/workflows/: hugo.yaml
.temp/session_17_45_35/: build_log.txt
docs/: CNAME  hugo.toml  logo-night.png~  logo-tiny-night.png~  logo-tiny.png~  logo.png~
docs/content/: api_reference.md  design.md  guide.md  installation.md  live_coding.md
docs/layouts/: index.html
docs/public/: diagram.png~  diagram.svg-autosave.kra  index.html  index.xml  sitemap.xml
docs/static/: composite-cell.png~  looping-cell.png~  regular-cell.png~
examples/: build_log.txt  demo.ipynb  display.ipynb  errors.ipynb  glfw.ipynb  ole-gray-beard.aac  plot.gp  raylib.ipynb  small-odin.png~
examples/.ipynb_checkpoints/: demo-checkpoint.ipynb  display-checkpoint.ipynb  errors-checkpoint.ipynb  glfw-checkpoint.ipynb  inspect-checkpoint.ipynb  messaging-checkpoint.ipynb  raylib-checkpoint.ipynb
src/gnuplot/: data.odin  expressions.odin  gnuplot.odin  plot.gp  set.odin  simple.gp  test.odin
src/interpreter/: Makefile  allocator.odin  cell.odin  config.odin  dependency_resolver.odin  display.odin  error.odin  help.odin  inspection.odin  (+9 more)
src/python_kernel/: env_activate.py  poetry.toml  pyproject.toml  requirements.txt
src/python_kernel/src/jodin/: __init__.py  __main__.py  external_pipe.py  kernel.py  poll.py
src/python_kernel/tests/: README.md  header.py  test_client_server_connection.py  test_client_server_message_late.py  test_server_client_connection.py  test_server_client_message_early.py
(+3684 files in other folders)
